added impact label font

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<div id="headerwrap">
 		<div class="container">
 			<br>
-			<h1>The Funk Kitchen</h1> <!-- style="margin-left:auto;margin-right:auto;background:black;max-width:682px;" -->
+			<h1 style="margin-left:auto;margin-right:auto;background:black;max-width:682px;">The Funk Kitchen</h1> <!-- style="margin-left:auto;margin-right:auto;background:black;max-width:682px;" -->
 			<h2>Custom Amp Shop</h2>
 			<div class="row">
 				<br>
@@ -92,7 +92,7 @@
 	<div id="g">
 		<div class="container">
 			<div class="row">
-				<h3>OUR SERVICES</h3>
+				<h3 style="font-family:impact-label">OUR SERVICES</h3>
 				<br>
 				<br>
 				<div class="col-lg-3">
