--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>Onassis - Bootstrap 3 Theme</title>
+    <title>the Funk Kitchen</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -19,9 +19,9 @@
     <script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/Chart.js"></script>
 	<script src="assets/js/modernizr.custom.js"></script>
-	
 
-	
+
+
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 
@@ -33,7 +33,7 @@
   </head>
 
   <body data-spy="scroll" data-offset="0" data-target="#theMenu">
-		
+
 	<!-- Menu -->
 	<nav class="menu" id="theMenu">
 		<div class="menu-wrap">
@@ -49,13 +49,13 @@
 			<a href="#"><i class="icon-dribbble"></i></a>
 			<a href="#"><i class="icon-envelope"></i></a>
 		</div>
-		
+
 		<!-- Menu button -->
 		<div id="menuToggle"><i class="icon-reorder"></i></div>
 	</nav>
 
 
-	
+
 	<!-- ========== HEADER SECTION ========== -->
 	<section id="home" name="home"></section>
 	<div id="headerwrap">
@@ -72,8 +72,31 @@
 			</div>
 		</div><!-- /container -->
 	</div><!-- /headerwrap -->
-	
-	
+
+    <nav class="navbar navbar-inverse" role="navigation" style="border-radius:0;margin:0">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">fk</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" style="text-align:center">
+          <ul class="nav navbar-nav" style="display:inline-block;float:none">
+            <li><a href="#">Main Course</a></li>
+            <li><a href="#">Spice Rack</a></li>
+            <li><a href="#">Cookbook</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
 	<!-- ========== WHITE SECTION ========== -->
 	<div id="w">
 		<div class="container">
@@ -86,7 +109,7 @@
 			</div>
 		</div><!-- /container -->
 	</div><!-- /w -->
-	
+
 	<!-- ========== SERVICES - GREY SECTION ========== -->
 	<section id="services" name="services"></section>
 	<div id="g">
@@ -118,7 +141,7 @@
 			</div>
 		</div><!-- /container -->
 	</div><!-- /g -->
-	
+
 	<!-- ========== CHARTS - DARK GREY SECTION ========== -->
 	<div id="dg">
 		<div class="container">
@@ -184,11 +207,11 @@
 							var myDoughnut = new Chart(document.getElementById("wordpress").getContext("2d")).Doughnut(doughnutData);
 					</script>
 				</div>
-			
-			</div>	
+
+			</div>
 		</div><!-- /container -->
 	</div><!-- /dg -->
-	
+
 	<section id="portfolio" name="portfolio"></section>
 	<div id="portfoliowrap">
 		<div class="container">
@@ -204,11 +227,11 @@
 				</div>
 				<div class="col-lg-4 port-space">
 					<a href="item.html"><img src="assets/img/work3.png"></a>
-				</div>				
-			</div>	
+				</div>
+			</div>
 		</div><!-- /container -->
 	</div><!-- /portfoliowrap -->
-	
+
 	<!-- ========== WHITE SECTION ========== -->
 	<div id="w">
 		<div class="container">
@@ -220,7 +243,7 @@
 			</div>
 		</div><!-- /container -->
 	</div><!-- /w -->
-	
+
 	<!-- ========== ABOUT - GREY SECTION ========== -->
 	<section id="about" name="about"></section>
 	<div id="g">
@@ -290,7 +313,7 @@
 			</div>
 		</div><!-- /container -->
 	</div><!-- /g -->
-	
+
 	<!-- ========== FOOTER SECTION ========== -->
 	<section id="contact" name="contact"></section>
 	<div id="f">
@@ -303,13 +326,13 @@
 						<h3>onassis@blacktie.co</h3>
 						<br>
 					</div>
-					
-					<div class="col-lg-4">	
+
+					<div class="col-lg-4">
 						<h3><b>Call Us:</b></h3>
 						<h3>+55 3984-4389</h3>
 						<br>
 					</div>
-					
+
 					<div class="col-lg-4">
 						<h3><b>We Are Social</b></h3>
 						<p>
@@ -323,15 +346,15 @@
 			</div>
 		</div><!-- /container -->
 	</div><!-- /f -->
-	
+
 	<div id="c">
 		<div class="container">
 			<p>Created by <a href="http://www.blacktie.co">BLACKTIE.CO</a></p>
-		
+
 		</div>
 	</div>
-	
-	
+
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
