--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h3>WELCOME TO <bold>THE FUNK KITCHEN</bold>. WE'RE SERVING UP FRESH, HOMEMADE RECIPES FOR KICK ASS SOUND. <bold>THAT'S BETTER</bold> THAN YOUR MOMMA'S APPLE PIE. <br/>
-					<bold>IDEAL FOR</bold> AGENCIES & FREELANCERS.
+				<h3>WELCOME TO <bold>THE FUNK KITCHEN</bold>. WE'RE SERVING UP FRESH, HOMEMADE RECIPES FOR KICK ASS SOUND. <bold>THAT'S BETTER</bold> THAN YOUR MOMMA'S APPLE PIE.
 				</h3>
 				</div>
 			</div>
