started working on item page

--- a/item.html
+++ b/item.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>Onassis - Bootstrap 3 Theme</title>
+    <title>Amp Title</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -58,18 +58,22 @@
 	
 	<!-- ========== HEADER SECTION ========== -->
 	<div id="itemwrap">
-		<div class="container">
-			<br>
-			<h1>Project</h1>
-			<h2>Web Design</h2>
-			<div class="row">
+		<div class="overlay">
+			<div class="container">
 				<br>
-				<br>
-				<br>
-				<div class="col-lg-6 col-lg-offset-3">
+				<h1>Orange Amp</h1>
+				<h2>Wicked Sound</h2>
+				<h2>Extra Cheese</h2>
+				<h2>Tube Boost</h2>
+				<div class="row">
+					<br>
+					<br>
+					<br>
+					<div class="col-lg-6 col-lg-offset-3">
+					</div>
 				</div>
-			</div>
-		</div><!-- /container -->
+			</div><!-- /container -->
+		</div>
 	</div><!-- /headerwrap -->
 	
 	
